--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,14 @@ Makefile*
 *.qmlproject.user.*
 
 # QtCtreator CMake
-CMakeLists.txt.user
+CMakeLists.txt.user*
 
+# clang-format file
+#*.clang-format
+
+# kde ".directory" file:
+*.directory
+
+# documentation
+docs/html
+docs/latex
